hupsa, heel eind met light head

--- a/committee.tex
+++ b/committee.tex
@@ -1545,61 +1545,82 @@ Note here that the functional sequence is identical for all languages. The same 
 
 \subsection{The light head}
 
-In this section, I discuss from which light-headed relatives Modern German headless relatives are derived. This is not easy to determine, because the light head in headless relative is always obligatorily deleted, so it never surfaces.
+In this section, I discuss from which light-headed relatives Modern German headless relatives are derived.
+There are two options. First, the light-headed relative is derived from an existing light-headed relative, and the deletion is optional. Second, the light-headed relative is derived from a light-headed relative that never surfaces in Modern German and the deletion is obligatory.
+I consider the first option first, and I give two reasons against it. I take the light head from this construction as a point of departure, and I end arguing for a head that resembles the weak demonstrative in sense of \citet{schwarz2009}.
 
-In \ref{ex:mg-light-headed}, I give the two types of light-headed relatives that Modern German has. They differ in their choice of relative pronoun.
+I give an example of a Modern German light-headed relative in \ref{ex:mg-den-wen}.\footnote{
+Modern German also has another light-headed relative, in which the relative pronoun is the \tsc{d}-pronoun. I give an example in \ref{ex:mg-den-den}.
 
-\ex.\label{ex:mg-light-headed}
-\ag. Jan umarmt den \tbf{den} \tbf{er} \tbf{mag}.\\
+\exg. Jan umarmt den \tbf{den} \tbf{er} \tbf{mag}.\\
 Jan hugs \tsc{d}.\tsc{m}.\tsc{sg}.\tsc{acc} \tsc{rel}.\tsc{m}.\tsc{sg}.\tsc{acc} he likes\\
-`Jan hugs the man that he likes.'\label{ex:mg-d-for-light-headed}
-\bg. Jan umarmt den \tbf{wen} \tbf{er} \tbf{mag}.\\
-Jan hugs \tsc{d}.\tsc{m}.\tsc{sg}.\tsc{acc} \tsc{rel}.\tsc{m}.\tsc{sg}.\tsc{acc} he likes\\
-`Jan hugs the man that he likes.'\label{ex:mg-wh-for-light-headed}
+`Jan hugs the man that he likes.'\label{ex:mg-den-den}
 
-In \ref{ex:mg-d-for-light-headed}, the relative pronoun is the \tsc{d}-pronoun which generally appears in headed relatives. An example of a headed relative is given in \ref{ex:mg-d-for-headed}.
+This relative pronoun generally appears in headed relatives. I give an example of that in \ref{ex:mg-den-headed}.
 
 \exg. Jan umarmt den Mann \tbf{den} \tbf{er} \tbf{mag}.\\
 Jan hugs \tsc{d}.\tsc{m}.\tsc{sg}.\tsc{acc} man \tsc{rel}.\tsc{m}.\tsc{sg}.\tsc{acc} he likes\\
-`Jan hugs the man that he likes.'\label{ex:mg-d-for-headed}
+`Jan hugs the man that he likes.'\label{ex:mg-den-headed}
 
 I exclude the possibility that Modern German headless relatives are derived from these light-headed relatives, because they appear with the incorrect relative pronoun.
+}
 
-In \ref{ex:mg-wh-for-light-headed}, the relative pronoun is the \tsc{wh}-pronoun which generally appears in headed relatives. An example of a headless relative is given in \ref{ex:mg-wh-for-headless}.
+\exg. Jan umarmt den \tbf{wen} \tbf{er} \tbf{mag}.\\
+Jan hugs \tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc} \tsc{rel}.\tsc{anim}.\tsc{acc} he likes\\
+`Jan hugs the man that he likes.'\label{ex:mg-den-wen}
+
+In \ref{ex:mg-den-wen}, the relative pronoun is the \tsc{wh}-pronoun \tit{wen} `\tsc{rel}.\tsc{an}.\tsc{acc}', and the light head is the \tsc{d}-pronoun \tit{den} `\tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc}'.
+
+One hypothesis is that the demonstrative \tit{den} `\tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc}' is deleted from the light-headed relative in \ref{ex:mg-den-wen} and a headless relative in \ref{ex:mg-wen} remains.\footnote{
+This is exactly what \citet{hanink2018} argues for. She claims that the feature content of the light head matches the feature content of the relative pronoun. Therefore, the light head is by default deleted. Only if the light head carries an extra focus feature it surfaces.
+}
 
 \exg. Jan umarmt \tbf{wen} \tbf{er} \tbf{mag}.\\
 Jan hugs \tsc{rel}.\tsc{an}.\tsc{acc} he likes\\
-`Jan hugs who he likes.'\label{ex:mg-wh-for-headless}
+`Jan hugs who he likes.'\label{ex:mg-wen}
 
-At first sight, it looks like headless relatives can be derived from this light-headed relative.\footnote{
-This is exactly what \citet{hanink2018} does. She argues that the feature content of the light head matches the feature content of the relative pronoun. Therefore, the light head is by default deleted. Only if the light head carries an extra focus feature it surfaces.
-}
-I argue that this is not the case. I already briefly noted in footnote \ref{ftn:das-was} that not all speakers of Modern German allow for the combination of a \tsc{d}-pronoun as light head and a \tsc{wh}-pronoun as relative pronoun. Some of my informants reported that the meaning of these two elements are incompatible for them. They prefer the \tsc{d}-pronoun as relative pronoun instead.
-I assume that the demonstrative \tit{den} spells out features having to do with definiteness. The relative pronoun \tit{wen} in \ref{ex:mg-wh-for-light-headed} spells out features having to do with sets of alternatives. The combination of this two does not match. A better match for the demonstrative is the relative pronoun \tit{den} in \ref{ex:mg-d-for-light-headed}, which also spells out features having to do with definiteness.
+I give two arguments that go against this hypothesis.
 
-The definite aspect of the demonstrative as a light head is even more problematic in the context of a headless relative. The main interpretation of headless relatives is namely not a definite one. Consider the headless relative in \ref{ex:mg-wh-for-headless-ever} that is combined with the the particle \tit{auch immer} `ever'. Light-headed relatives do not allow for this particle to be inserted.
+First, headless relatives are able to combine with \tit{auch immer} `ever'.
 
 \exg. Jan unarmt \tbf{wen} {\tbf{auch} \tbf{immer}} \tbf{er} \tbf{mag}.\\
 Jan hugs \tsc{rel}.\tsc{an}.\tsc{acc} ever he likes\\
 `Jan hugs whoever he likes.'\label{ex:mg-wh-for-headless-ever}
 
-The sentence in \ref{ex:mg-wh-for-headless-ever} has two interpretations (see \citealt{s̆imík2020} for a recent elaborate overview on the semantics of free relatives). The first interpretation is described as universal-like and the second as definite-like. The universal-like interpretation corresponds to a universal quantifier: Jan hugs everybody that he likes. The definite-like interpretation corresponds to a definite description: Jan hugs the person that he likes. The latter interpretation is compatible with the light-headed relative in \ref{ex:mg-wh-for-light-headed}.
+Light-headed relatives are not.
 
-\pgcitet{s̆imík2020}{4} notes that some languages do not easily allow for the definite-like interpretation of headless relatives with an \tit{ever}-morpheme. There is no language documented that does not allow for the universal-like interpretation, but does allow the definite-like interpretation.
-In the same spirit, informants have reported to me that headless relatives with case mismatches become more acceptable in the universal-like interpretation compared to the definite-like interpretation.
-What I take away from that, is that the universal-like interpretation of headless relatives is the main interpretation that should be accounted for. This is not the interpretation that the light-headed relative in \ref{ex:mg-d-for-light-headed} provides.
+\exg. *Jan unarmt den \tbf{wen} {\tbf{auch} \tbf{immer}} \tbf{er} \tbf{mag}.\\
+Jan hugs \tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc} \tsc{rel}.\tsc{an}.\tsc{acc} ever he likes\\
+`Jan hugs him whoever he likes.'\label{ex:mg-wh-for-headless-ever}%source?
 
-I suggest that the light head is a form that shows resemblance to the weak definite of \citet{schwarz2009}. \citet{schwarz2009} distinguishes strong and weak definites in Modern German. The strong definite is anaphoric in nature, and the weak definite encodes uniqueness. First I give an example of a strong definite in \ref{ex:mg-florian-strong}. The strong definite is \tit{dem} that precedes \tit{Freund} `friend'. It refers back to the linguistic antecedent \tit{einen Freund} `a friend'.
+I assume that the headless relative is not derived from an ungrammatical structure.\footnote{
+I am aware that such an analysis is common for sluicing. I see that as an exception that corroborates the rule
+}
+
+Secondly, the headless relative in \ref{ex:mg-wen} has two interpretations (see \citealt{s̆imík2020} for a recent elaborate overview on the semantics of free relatives). The light-headed relative in \ref{ex:mg-den-wen} has only one of them.
+The definite-like interpretation corresponds to a definite description: Jan hugs the person that he likes. This interpretation is available for the headless relative and for the light-headed relative.
+The universal-like interpretation corresponds to a universal quantifier: Jan hugs everybody that he likes. This interpretation is available for the headless relative, but not for the light-headed relative.
+
+There are some facts that indicate that this universal-like interpretation of headless relatives is the main interpretation that should be accounted for.
+Informants have reported to me that headless relatives with case mismatches become more acceptable in the universal-like interpretation compared to the definite-like interpretation.
+In the same spirit, \pgcitet{s̆imík2020}{4} notes that some languages do not easily allow for the definite-like interpretation of headless relatives with an \tit{ever}-morpheme. There is no language documented that does not allow for the universal-like interpretation, but does allow the definite-like interpretation.
+
+In sum, I argued against the light-headed relative in \ref{ex:mg-den-wen} being the source of the headless relative in \ref{ex:mg-wen}. I argue that the problem is the feature content of \tit{den}.
+
+
+In footnote \ref{ftn:das-was}, I already briefly noted that not all speakers of Modern German allow light-headed relative in \ref{ex:mg-den-wen}. Some of my informants reported that the meaning of these two elements are incompatible for them. They prefer the \tsc{d}-pronoun as relative pronoun instead (as in \ref{ex:mg-den-den}).
+I assume that the demonstrative \tit{den} spells out features having to do with definiteness and deixis (Radek). The relative pronoun \tit{wen} in \ref{ex:mg-wh-for-light-headed} spells out features having to do with sets of alternatives. The combination of this two does not match. That is why the relative pronoun \tit{den}, which also contains definiteness features, is a good match with a \tsc{d}-pronoun as a light head.
+
+I propose to remove definiteness and deixis features. What I get then: Schwarz' weak demonstrative.\footnote{
+That is, morphologically. In meaning, I see that
+}
+
+
+I suggest that the light head is a form that shows resemblance to the weak definite of \citet{schwarz2009}. \citet{schwarz2009} distinguishes strong and weak definites in Modern German. The strong definite is anaphoric in nature, and the weak definite encodes uniqueness (but is mine unique?). First I give an example of a strong definite in \ref{ex:mg-florian-strong}. The strong definite is \tit{dem} that precedes \tit{Freund} `friend'. It refers back to the linguistic antecedent \tit{einen Freund} `a friend'.
 
 \exg. Hans hat heute einen Freund zum Essen mit nach Hause gebracht. Er hat uns vorher ein Foto von dem Freund gezeigt.\\
 Hans has today a friend {to the} dinner with to home brought he has us beforehand a photo of the\scsub{strong} friend shown\\
 `Hans brought a friend home for dinner today. He had shown us a photo of the friend beforehand.'\label{ex:mg-florian-strong}
-
-In a light-headed relative, this is appropriate when the light head refers back to something or someone introduced earlier in the discourse. An example of such a context is given \ref{ex:mg-context-strong}.
-
-\ex. Yesterday Jan met with two friends. He likes one of them. The other one he does not like so much.\label{ex:mg-context-strong}
-
-Following this context, the light head \tit{den}, so the strong definite, is appropriate. This, however, is not the universal-like interpretation I discussed is the main interpretation that should be accounted for in headless relatives.
 
 Weak definites are used when situational uniqueness is involved. This uniqueness can be global or within a restricted domain. I give two examples in \ref{ex:mg-florian-weak}. In \ref{ex:mg-florian-weak-hund}, the dog is unique in this specific situation of the break-in. In \ref{ex:mg-florian-weak-mond}, the moon is unique for us people on the planet.
 
