light head ongeveer klaar

--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -742,7 +742,7 @@
   volume = {1},
   number = {1},
   journal = {Natural Language Semantics},
-  author = {Rooth, Maths},
+  author = {Rooth, Mats},
   year = {1992},
   pages = {76-116},
   doi = {10.1007/bf02342617}
@@ -765,8 +765,18 @@
 
 @book{baker2003,
   title={Lexical categories: Verbs, nouns and adjectives},
-  author={Baker, Mark C and Baker, Mark Cleland},
+  author={Baker, Mark Cleland},
   volume={102},
   year={2003},
   publisher={Cambridge University Press}
+}
+
+@incollection{cardinaletti1994,
+  address = {Venice},
+  title = {The {{Typology}} of {{Structural Deficiency}}. {{On}} the {{Three Grammatical Classes}}},
+  booktitle = {Working {{Papers}} in {{Linguistics}}},
+  publisher = {{University of Venice}},
+  author = {Cardinaletti, Anna and Starke, Michal},
+  year = {1994},
+  pages = {41-109}
 }
