idea for polish

--- a/committee.tex
+++ b/committee.tex
@@ -1017,7 +1017,7 @@ The second relevant feature is \tsc{rel}, which establishes a relation. A langua
 
 \exg. a-mi, a-ki, a-melyik \\
  \tsc{rel}-what \tsc{rel}-who \tsc{rel}-which\\
- \flushfill{Kenesei et al. 1998: 40)}\label{ex:hungarian-rel-wh}
+ \flushfill{Kenesei et al. 1998: 40}\label{ex:hungarian-rel-wh}
 
 In sum, the \tit{w} spells out the features \tsc{wh} and \tsc{rel}, shown in \ref{ex:mg-entry-w}.
 
@@ -2348,6 +2348,79 @@ The same holds when when the external case is more complex than the internal cas
 
 
 \subsection{The relative pronoun}
+
+The fseq
+
+\ex.
+\begin{forest} boom
+[(\tsc{acc}P)
+   [(\tsc{f}2)]
+   [\tsc{nom}P
+       [\tsc{f}1]
+       [\tsc{rel}P
+           [\tsc{rel}]
+           [\tsc{wh}P
+               [\tsc{wh}]
+               [\tsc{ind}P
+                   [\tsc{ind}]
+                   [\tsc{anim}P
+                       [\tsc{anim}]
+                       [\tsc{class}P
+                           [\tsc{class}]
+                           [\tsc{med}P
+                               [\tsc{dx}\scsub{2}]
+                               [\tsc{prox}P
+                                   [\tsc{dx}\scsub{1}]
+                                   [ΣP
+                                        [Σ]
+                                        [\tsc{ref}]
+                                   ]
+                               ]
+                           ]
+                       ]
+                   ]
+               ]
+           ]
+       ]
+   ]
+]
+\end{forest}
+
+
+kogo
+komu
+
+
+I start with \tit{go} and \tit{mu}.
+
+te-go = masculine + neuter
+te-mu = masculine + neuter
+
+modelled by letting \tit{te} spell out until masc so that it can shrink and become a neuter one
+
+this leaves ko
+
+now consider
+
+cze-go
+ko-go
+
+cze-mu
+ko-mu
+
+we know that a vowel changes between e and o after hard and soft consonants. k is hard, so o. cz is soft, so e, just like what we saw in te-go, the t is soft, so e.
+
+change in vowel is a consequence of the change in the consonant
+
+that means that k spells out masculine, but cz does not
+
+so, k spells out anim, class, rel and wh
+
+what about dxs, ref and sigma?
+
+bartosz has arguments for dx being the t and that c overrides t
+
+jego is evidence for sigma and ref being in the vowel
 
 
 
