--- a/committee.tex
+++ b/committee.tex
@@ -779,7 +779,7 @@ When the internal and the external case match, the relative pronoun can delete t
 When the internal case is more complex than the external case, the relative pronoun can still delete the light head, for the same reason: the relative pronoun contains all constituents of the light head.
 This is no longer the case when the external case is more complex than the internal case. The light head does not contain all constituents of the relative pronoun, and the relative pronoun does not contain all constituents of the light head. As a result, there is no grammatical form to surface when the external case is more complex.
 
-\subsection{The relative pronoun}
+\subsection{The relative pronoun}\label{sec:mg-rel}
 
 In this section I discuss the relative pronoun in Modern German headless relatives.
 First, I show, independent from case facts, that the surface pronoun is the relative pronoun. The evidence comes from extraposition data.
@@ -839,7 +839,7 @@ Jan has what eaten he cooked has\\
 
 In conclusion, extraposition facts show that the surface pronoun in Modern German headless relatives is the relative pronoun.
 
-Now I turn to the internal strucrture of the relative pronoun. In Section \ref{sec:basic-idea} I gave the structure in \ref{ex:mg-simplified-rel} as a simplified representation of the relative pronoun.
+Now I turn to the internal structure of the relative pronoun. In Section \ref{sec:basic-idea} I gave the structure in \ref{ex:mg-simplified-rel} as a simplified representation of the relative pronoun.
 
 \ex.\label{ex:mg-simplified-rel}
 \begin{forest} boom
@@ -1856,8 +1856,6 @@ fit to=tree]{};
 
 
 
-
-
 % At first sight it seems like \citet{fuss2014} discuss a exception to this claim, namely headless relatives with \tsc{d}-pronouns. However, they claim that these headless relatives are actually light-headed relatives in which one of two syncretic elements is deleted by haplology.
 
 
@@ -1867,8 +1865,8 @@ Consider the example in \ref{ex:mg-nom-nom-rep}, in which the internal nominativ
 The internal case is nominative, as the predicate \tit{mögen} `to like' takes nominative subjects. The relative pronoun \tit{wer} `\ac{rel}.\ac{an}.\ac{nom}' appears in the nominative case. This is the element that surfaces.
 The external case is nominative as well, as the predicate \tit{besuchen} `to visit' also takes nominative subjects. The light head \tit{ər} `\ac{dem}.\ac{an}.\ac{nom}' appears in the nominative case. It is placed between square brackets because it does not surface.
 
-\exg. Uns besucht [\underline{ər}], \underline{\tbf{wer}} \tbf{Maria} \tbf{mag}.\\
- 2\ac{pl}.\ac{acc} visit.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{dem}.\ac{an}.\ac{nom} \ac{rel}.\ac{an}.\ac{nom} Maria.\ac{acc} like.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
+\exg. Uns besucht [\underline{r}], \underline{\tbf{wer}} \tbf{Maria} \tbf{mag}.\\
+ 2\ac{pl}.\ac{acc} visit.\ac{pres}.3\ac{sg}\scsub{[nom]} \tsc{elh}.\ac{an}.\ac{nom} \ac{rel}.\ac{an}.\ac{nom} Maria.\ac{acc} like.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
  `Who visits us likes Maria.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-nom-rep}
 
 In Figure \ref{fig:mg-int=ext}, I give the syntactic structure of the light head at the top and the syntactic structure of the relative pronoun at the bottom.
@@ -2336,22 +2334,34 @@ matching        & *                            & *                     & Polish 
 \label{tbl:overview-rel-light-polish}
 \end{table}
 
-A language of the matching type (like Polish) allows neither the internal nor the external case to surface when either of them wins the case competition. Neither the relative pronoun with its internal case nor the light head with its external case can be the surface pronoun. The goal of this section is to derive this from the way light heads and relative pronouns are spelled out in Polish.
 
-I argue that Polish headless relatives are derived from regular light-headed relatives.
-I decompose the light heads and relative pronouns intro smaller morphemes, and I show which features each of the morphemes corresponds to.
+A language of the internal-only type (like Polish) allows neither the internal nor the external case to surface when either of them wins the case competition. This means that neither the relative pronoun with its internal case nor the light head with its external case can be the surface pronoun. The goal of this section is to derive these properties from the way light heads and relative pronouns are spelled out in Polish.
+
+The section is structured as follows.
+First, I discuss the relative pronoun. I decompose the relative pronouns into three morphemes, and I show which features each of the morphemes corresponds to.
+Then I discuss the light head. I argue that Polish headless relatives are derived from a light-headed relative clause that does not surface in the language. I show that the features of the light head are spread over two morphemes.
+
 Finally, I compare the constituents of the light head and the relative pronoun.
-When the internal and the external case match, the relative pronoun can delete the light head, because it contains all its constituents.
-This does not work when the internal case is more complex than the external case. The relative pronoun does not contain all constituents of the light head, and the light head does not contain all constituents of the relative pronoun. As a result, there is no grammatical form to surface when the external case is more complex.
-The same holds when when the external case is more complex than the internal case. The light head does not contain all constituents of the relative pronoun, and the relative pronoun does not contain all constituents of the light head. As a result, there is no grammatical form to surface when the external case is more complex.
-
+When the internal and the external case match, the relative pronoun can delete the light head, because the light head forms a single constituent within the relative pronoun.
+When the internal case is more complex than the external case, the light head is not a single constituent within the relative pronoun anymore. The relative pronoun contains all features of the light head, but they are spread over separate constituents. That is, the weaker feature containment requirement is met, but the stronger constituent containment requirement is not. As a result, there is no grammatical form to surface when the internal case is more complex.
+When the external case is more complex than the internal case, the relative pronoun is not a single constituent within the light head. The relative pronoun contains features that are not part of the light head. Since the weaker feature containment requirement is not met, the stronger constituent requirement cannot be met either. As a result, there is no grammatical form to surface when the internal case is more complex.
 
 
 \subsection{The relative pronoun}
 
-The fseq
+In this section I discuss the relative pronoun in Polish headless relatives.
 
-\ex.
+The relative pronoun in Polish.
+
+\exg. Jan zobaczył tego, kogo Maria zobaczyła.\\
+ Jan saw this who Maria saw\\
+ `John saw the one Mary saw.'
+
+
+
+Now I turn to the internal structure of the Polish relative pronoun. In Section \ref{sec:mg-rel} I argued that Modern German relative pronouns consist of the features given in the functional sequence in \ref{ex:pol-fseq-rel}.
+
+\ex.\label{ex:pol-fseq-rel}
 \begin{forest} boom
 [(\tsc{acc}P)
    [(\tsc{f}2)]
@@ -2361,16 +2371,16 @@ The fseq
            [\tsc{rel}]
            [\tsc{wh}P
                [\tsc{wh}]
-               [\tsc{ind}P
-                   [\tsc{ind}]
-                   [\tsc{anim}P
-                       [\tsc{anim}]
-                       [\tsc{class}P
-                           [\tsc{class}]
-                           [\tsc{med}P
-                               [\tsc{dx}\scsub{2}]
-                               [\tsc{prox}P
-                                   [\tsc{dx}\scsub{1}]
+               [\tsc{med}P
+                   [\tsc{dx}\scsub{2}]
+                   [\tsc{prox}P
+                       [\tsc{dx}\scsub{1}]
+                       [\tsc{ind}P
+                           [\tsc{ind}]
+                           [\tsc{anim}P
+                               [\tsc{anim}]
+                               [\tsc{class}P
+                                   [\tsc{class}]
                                    [ΣP
                                         [Σ]
                                         [\tsc{ref}]
@@ -2386,66 +2396,19 @@ The fseq
 ]
 \end{forest}
 
+As I pointed out in Section \ref{sec:basic-idea}, I assume that the difference between Modern German and Polish headless relatives comes from whether the relative pronoun can delete the light head. This, in turn, depends on whether the light head forms a constituent within the relative pronoun. What remains stable between the two languages is which features are spelled out.
 
-kogo
-komu
+I discuss two relative pronouns: the animate accusative singular and the animate dative singular. These are the two forms that I compare the constituents of in Section \ref{sec:comparing-polish}. I show them in \ref{ex:pol-rels}.
 
+\ex.\label{ex:pol-rels}
+\ag. k-o-go\\
+ `\tsc{rel}.\tsc{an}.\tsc{sg}.\tsc{acc}'\\
+\bg. k-o-mu\\
+ `\tsc{rel}.\tsc{an}.\tsc{sg}.\tsc{dat}'\\
 
-I start with \tit{go} and \tit{mu}.
+I decompose the relative pronouns in three morphemes: the \tit{k}, the \tit{o} and the final suffix. For each morpheme, I discuss which features they spell out, and I give their lexical entries. In the end, I derive the relative pronouns, given here in \ref{ex:pol-spellout-rel-acc-preview} and \ref{ex:pol-spellout-rel-dat-preview}.
 
-te-go = masculine + neuter
-te-mu = masculine + neuter
-
-modelled by letting \tit{te} spell out until masc so that it can shrink and become a neuter one
-
-this leaves ko
-
-now consider
-
-cze-go
-ko-go
-
-cze-mu
-ko-mu
-
-we know that a vowel changes between e and o after hard and soft consonants. k is hard, so o. cz is soft, so e, just like what we saw in te-go, the t is soft, so e.
-
-change in vowel is a consequence of the change in the consonant
-
-that means that k spells out masculine, but cz does not
-
-so, k spells out anim, class, rel and wh
-
-what about dxs, ref and sigma?
-
-bartosz has arguments for dx being the t and that c overrides t
-
-jego is evidence for sigma and ref being in the vowel
-
-
-
-
-
-In Section \ref{sec:basic-idea} I gave the structure in \ref{ex:polish-simplified-rel} as a simplified representation of the relative pronoun.
-
-\ex.\label{ex:polish-simplified-rel}
-\begin{forest} boom
-  [\tsc{rel}P
-      [\tsc{rel}]
-      [\tsc{k}P
-          [ϕP
-              [\phantom{x}ϕ\phantom{x}, roof]
-          ]
-          [\tsc{k}P,
-              [\tsc{k}]
-          ]
-      ]
-  ]
-\end{forest}
-
-I explained that matching languages like Polish package their languages together differently than internal-only languages like Modern German. That is why I cannot give a single structure for different cases. \tit{mu} starts at \tsc{ind} and \tit{go} starts at \tit{f}1. This is going to be crucial in deriving the difference between Polish and Modern German. I this section I decompose the morphemes of the relative pronoun, and connect lexical entries to them.
-
-\ex.
+\ex.\label{ex:pol-spellout-rel-acc-preview}
 \tiny{
 \begin{forest} boompje
   [\tsc{rel}P, s sep=17mm
@@ -2459,16 +2422,19 @@ I explained that matching languages like Polish package their languages together
           [\tsc{rel}]
           [\tsc{wh}P
               [\tsc{wh}]
-              [\tsc{med}P,
+              [\tsc{med}P
                   [\tsc{deix\scsub{2}}]
-                  [\tsc{deix\scsub{1}}]
+                  [\tsc{prox}P
+                      [\tsc{deix\scsub{1}}]
+                      [\tsc{ind}]
+                  ]
               ]
           ]
       ]
-      [\tsc{dat}P, s sep=17.5mm
+      [\tsc{acc}P, s sep=24mm
           [\tsc{anim}P,
           tikz={
-          \node[label=below:\tit{e/o},
+          \node[label=below:\tit{o},
           draw,circle,
           scale=0.9,
           fit to=tree]{};
@@ -2476,7 +2442,70 @@ I explained that matching languages like Polish package their languages together
               [\tsc{anim}]
               [\tsc{class}P
                   [\tsc{class}]
-                  [\tsc{ref}]
+                  [ΣP
+                      [Σ]
+                      [\tsc{ref}]
+                  ]
+              ]
+          ]
+          [\tsc{acc}P,
+          tikz={
+          \node[label=below:\tit{go},
+          draw,circle,
+          scale=0.85,
+          fit to=tree]{};
+          }
+              [\tsc{f}2]
+              [\tsc{nom}P
+                  [\tsc{f}1]
+                  [\tsc{ind}P
+                      [\tsc{ind}]
+                  ]
+              ]
+          ]
+      ]
+  ]
+\end{forest}
+}
+
+\ex.\label{ex:pol-spellout-rel-dat-preview}
+\tiny{
+\begin{forest} boompje
+  [\tsc{rel}P, s sep=17mm
+      [\tsc{rel}P,
+      tikz={
+      \node[label=below:\tit{k},
+      draw,circle,
+      scale=0.925,
+      fit to=tree]{};
+      }
+          [\tsc{rel}]
+          [\tsc{wh}P
+              [\tsc{wh}]
+              [\tsc{med}P
+                  [\tsc{deix\scsub{2}}]
+                  [\tsc{prox}P
+                      [\tsc{deix\scsub{1}}]
+                      [\tsc{ind}]
+                  ]
+              ]
+          ]
+      ]
+      [\tsc{dat}P, s sep=17.5mm
+          [\tsc{anim}P,
+          tikz={
+          \node[label=below:\tit{o},
+          draw,circle,
+          scale=0.9,
+          fit to=tree]{};
+          }
+              [\tsc{anim}]
+              [\tsc{class}P
+                  [\tsc{class}]
+                  [ΣP
+                      [Σ]
+                      [\tsc{ref}]
+                  ]
               ]
           ]
           [\tsc{dat}P,
@@ -2502,61 +2531,129 @@ I explained that matching languages like Polish package their languages together
 \end{forest}
 }
 
-\ex.
-\tiny{
-\begin{forest} boompje
-  [\tsc{rel}P, s sep=17mm
-      [\tsc{rel}P,
-      tikz={
-      \node[label=below:\tit{k},
-      draw,circle,
-      scale=0.925,
-      fit to=tree]{};
-      }
-          [\tsc{rel}]
-          [\tsc{wh}P
-              [\tsc{wh}]
-              [\tsc{med}P,
-                  [\tsc{deix\scsub{2}}]
-                  [\tsc{deix\scsub{1}}]
-              ]
-          ]
-      ]
-      [\tsc{acc}P, s sep=24mm
-          [\tsc{ind}P,
-          tikz={
-          \node[label=below:\tit{e/o},
-          draw,circle,
-          scale=0.9,
-          fit to=tree]{};
-          }
-              [\tsc{ind}]
-              [\tsc{anim}P
-                  [\tsc{anim}]
-                  [\tsc{class}P
-                      [\tsc{class}]
-                      [\tsc{ref}]
-                  ]
-              ]
-          ]
-          [\tsc{acc}P,
-          tikz={
-          \node[label=below:\tit{go},
-          draw,circle,
-          scale=0.85,
-          fit to=tree]{};
-          }
-              [\tsc{f}2]
-              [\tsc{nom}P
-                  [\tsc{f}1]
+I start with the morphemes \tit{go} and \tit{mu}. B
+
+\begin{table}[htbp]
+  \center
+  \caption{Polish demonstratives Swan, p. 171}
+  \begin{tabular}[b]{cccc}
+    \toprule
+              & \tsc{n} & \tsc{n} & \tsc{f} \\
+    \cmidrule{2-3}
+    \tsc{nom} & to      & ten     & ta      \\
+    \tsc{acc} & te-go   & te-go   & tę      \\
+    \tsc{dat} & te-mu   & te-mu   & tej     \\
+    \bottomrule
+  \end{tabular}
+  \label{tbl:pol-dem}
+\end{table}
+
+\ex. \label{ex:pol:entry-mu}
+\begin{forest} boom
+  [\tsc{dat}P
+      [\tsc{f}3]
+      [\tsc{acc}P
+          [\tsc{f}2]
+          [\tsc{nom}P
+              [\tsc{f}1]
+              [\tsc{ind}P
+                  [\tsc{ind}]
               ]
           ]
       ]
   ]
+  {\draw (.east) node[right]{⇔ \tit{mu}}; }
 \end{forest}
+
+\ex. \label{ex:pol:entry-go}
+\begin{forest} boom
+  [\tsc{acc}P
+      [\tsc{f}2]
+      [\tsc{nom}P
+          [\tsc{f}1]
+          [\tsc{ind}P
+              [\tsc{ind}]
+          ]
+      ]
+  ]
+  {\draw (.east) node[right]{⇔ \tit{go}}; }
+\end{forest}
+
+
+\ex. \label{ex:pol:entry-te}
+\begin{forest} boom
+  [\tsc{anim}P
+      [\tsc{anim}]
+      [\tsc{class}P
+          [\tsc{class}]
+          [..
+          ]
+      ]
+  ]
+  {\draw (.east) node[right]{⇔ \tit{te}}; }
+\end{forest}
+
+modelled by letting \tit{te} spell out until masc so that it can shrink and become a neuter one
+
+
+
+this leaves ko
+
+now consider
+
+\begin{table}[htbp]
+  \center
+  \caption{Polish animate and inanimate \tsc{wh}-pronouns}
+  \begin{tabular}[b]{ccc}
+    \toprule
+              & \tit{inan} & \tsc{an} \\
+    \cmidrule{2-3}
+    \tsc{acc} & cze-go     & ko-go    \\
+    \tsc{dat} & cze-mu     & ko-mu    \\
+    \bottomrule
+  \end{tabular}
+  \label{tbl:overview-rel-light-ohg}
+\end{table}
+
+The animate and inanimate forms are no longer syncretic between the accusative and the dative. The \tsc{wh}-pronoun is \tit{cze} plus the suffix in inanimate, and \tit{ko} plus the suffix in the animate. This can mean three things: (1) \tit{cz} spells out different features than \tit{k} and \tit{e} spells out different features than \tit{o}, (2) \tit{cz} spells out different features than \tit{k}, and the change in vowel is a phonological process, or (3) \tit{e} spells out different features than \tit{o}, and the change in the consonant is a phonological process.
+
+The phonological processes that I refer to known in Polish: as Baunaz \& Lander (2018a) point out, the suffix -o /o/ shifts into -e /e/ after a soft consonant ż- /ʒ/. This could work in two directions.
+
+An indication into the direction of the third option is that \tsc{wh}-pronouns in Polish often start with a \tit{k}.
+
+\ex.
+\a. g-dzie = where at (g is the result of voicing)
+\b. k-iedy = when
+\b. k-tory = which one
+
+Another instance of \tit{k} to \tit{cz} could be:
+
+\ex.
+\b. cz-yj = k-jyj 'whose'
+\a. czyjego
+
+Or this latter is another example of a \tsc{wh}-pronoun that is does not have a \tit{k} but \tit{cz}. There is also a \tsc{wh}-pronoun that starts with a \tit{j}:
+
+j-ak = how
+
+In dissertation, I go with the second option, namely that \tit{cz} and \tit{k} spell out different features and that the vowel changes according to the phonology. I leave determining whether it could be either of the other two options to future research.
+
+The difference in features is the animacy: \tit{k} spells out \tsc{class} and \tsc{masc} and \tit{cz} spells out \tsc{class}.\footnote{
+It is also possible for \tit{k} to spell out \tsc{masc} and \tit{cz} no gender features, but that does not work with my analysis.
 }
 
-Important is here, the fseq is identical to Modern German!
+so, k spells out anim, class, rel and wh
+
+what about dxs, ref and sigma?
+
+bartosz has arguments for dx being the t and that c overrides t
+
+jego is evidence for sigma and ref being in the vowel
+
+
+
+
+I explained that matching languages like Polish package their languages together differently than internal-only languages like Modern German. That is why I cannot give a single structure for different cases. \tit{mu} starts at \tsc{ind} and \tit{go} starts at \tit{f}1. This is going to be crucial in deriving the difference between Polish and Modern German. I this section I decompose the morphemes of the relative pronoun, and connect lexical entries to them.
 
 \tit{mu}, \tit{go}, \tit{e/o}, \tit{k}
 
