verder met pools

--- a/fenna-files/packages.sty
+++ b/fenna-files/packages.sty
@@ -37,6 +37,7 @@ boompje/.style={for tree={s sep=8mm, inner sep=0, l=0}}
 \tikzstyle{outcome} = [rectangle, minimum width=1.2cm, minimum height=1.2cm, text centered, text width=1.2cm, draw=black]
 \tikzstyle{example} = [rectangle, minimum width=3cm, minimum height=1cm, text centered, text width=3cm, draw=white]
 \tikzstyle{arrow} = [thick,->,>=stealth]
+\tikzstyle{constituent-deletion} = [rectangle, rounded corners=2cm, draw=black]
 
 %%%TREES%%%
 
